# kb

AlmaLinux/: Install.md
AmazonLinux2/: README.md  install-python.md
Bazel/: .gitignore  README.md
Bazel/projectA/: WORKSPACE
Bazel/projectA/moduleA/: BUILD  car.cc  car.h
CMake/: CMakeLists.txt  launch.json
CMake/cxx/: README.md
Cxx/CMake/src/: c2.cpp  main.cpp
Cxx/conan2-example/: CMakeLists.txt  CMakeUserPresets.json  README.md  conanfile.txt
Cxx/conan2-example/src/: c2.cpp  main.cpp
Cxx/concur-example/: CMakeLists.txt  CMakePresets.json  README.md
Cxx/concur-example/include/x4/: memory.hpp  thread.hpp
Cxx/concur-example/src/: atomic_ops.S  fork_demo.c  futex_demo.c  fwd_list_test.cpp  mutex_test.cpp  pool_test.cpp  shpt.cpp  test.ipynb  thread.cc
Cxx/hunter-example/: CMakeLists.txt  README.md
Cxx/hunter-example/cmake/Hunter/: config.cmake
Cxx/hunter-example/src/: main.cpp
Cxx/opengl-example/: CMakeLists.txt  CMakePresets.json  README.md
Cxx/opengl-example/include/glad/: gl.h
Cxx/opengl-example/include/x4/: memory.hpp
Cxx/opengl-example/src/: glmain.cpp  glmain.frag  glmain.vert  shpt.cpp  test.cpp
Cxx/vcpkg-example/: CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
Cxx/vcpkg-example/src/: main.cpp
Docker/: README.md  use-docker-container-as-vm.md
DuckDNS/: README.md
Fedora/: install-gcc-11-from-source.md
GNOME/: README.md
Rust/rs1/: Cargo.toml  README.md
Rust/rs1/src/: main.rs
Sagemaker/AITemplate/: compile-and-deploy.md  create-and-invoke-sm-endpoint.ipynb  test-stable-diffusion.py
Sagemaker/AITemplate/code/: inference.py  pipeline_stable_diffusion_ait.py  requirements.txt
Sagemaker/hf/roberta-large/: build-trt-engine.py  build-trt-engine.sh  convert-to-onnx-fp32.py  net_utils.py  run-trt.py  test-roberta-neo.py  test-roberta-optimize_for_inference.py  test-roberta-pt.py  test-roberta-torch-compile.py  trace-roberta-large.py
Sagemaker/hf/roberta-large/code/: inference.py
git/: .gitconfig
xla/interactive_graphviz/: README.md  derivatives.drawio  softmax.py
